--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,9 @@
 theme: jekyll-theme-architect
 title: [Transitive Network]
 description: [A layer-2 tokenless scalable payment network for Ethereum]
-show_downloads: ["false"]
+show_downloads: false
 github:
- is_user_page: ["true"]
+ is_project_page: false
+ is_user_page: true
+ owner_url: [https://github.com/pedrorechez/]
+ tar_url: false
