--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,4 +5,4 @@ show_downloads: false
 github: 
   is_project_page: false
   is_user_page: true
-  owner_url: [https://github.com/pedrorechez/transitivenetwork]
+  owner_url: "https://github.com/pedrorechez/transitivenetwork"
