--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 theme: jekyll-theme-architect
 title: [Transitive Network]
-description: [The layer-2 tokenless scalable payment network for Ethereum]
+description: [Tokenless IOU Credit Network in Ethereum]
 show_downloads: false
 github: 
   is_project_page: false
   is_user_page: true
   owner_url: "https://github.com/pedrorechez"
+plugins:
+    - jekyll-sitemap
