Project Page enabled

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: [Transitive Network]
 description: [Tokenless IOU Credit Network in Ethereum]
 show_downloads: false
 github: 
-  is_project_page: false
-  is_user_page: true
-  owner_url: "https://github.com/pedrorechez"
+  is_project_page: true
+  is_user_page: false
+  owner_url: "https://github.com/pedrorechez/transitivenetwork"
 plugins:
     - jekyll-sitemap
